# Nexus

./: .gitignore  Makefile  README.md  check_setup.py  lint.sh  pyproject.toml  run_train.py  setup.py
configs/klein4b/: base.yaml  distillation.yaml  dreambooth.yaml  run1.yaml
datasets/: precompute.py  utils.py
datasets/prepare/dreambooth/: prepare.py  run.sh
datasets/prepare/dreambooth/tests/: test_prepare.py
datasets/prepare/sstk/: base.py  precompute.py  prepare.py  run.sh
datasets/prepare/sstk/tests/: README.md  test_precompute.py  test_prepare.py
datasets/tests/: test_precompute.py
notebooks/: README.md  visualize_mds.ipynb
scripts/: check_setup.py  train.sh
src/nexus/: __init__.py
src/nexus/archs/: __init__.py  base.py
src/nexus/data/: __init__.py  precomputed_dreambooth_dataset.py  precomputed_sstk.py  precomputed_sstk_dataset.py  t2i_dataset.py  utils.py
src/nexus/losses/: __init__.py  context.py  distillation.py  flow_matching.py  prior_preservation.py
src/nexus/models/: __init__.py  transformer_wrapper.py
src/nexus/pipelines/: __init__.py
src/nexus/train/: __init__.py  __main__.py  config.py  losses.py  main.py  train_loop.py  validation.py
src/nexus/train/losses/: __init__.py  distillation.py  flow_matching.py  prior_preservation.py
src/nexus/utils/: __init__.py  checkpoint_utils.py  log_utils.py  mds_utils.py  train_utils.py
tests/: __init__.py  test_checkpoint_utils.py  test_config.py  test_data.py  test_log_utils.py  test_losses.py
