[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "0.1.0"
description = "All things DiT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
train = [
    "torch>=2.0",
    "diffusers",
    "transformers",
]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
